--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,6 +59,30 @@ header > img {
   margin: 7px;
 }
 
+#slide .mainpic {
+  position: relative;
+}
+
+#slide .mainpic .left{
+  position: absolute;
+  left: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#slide .mainpic .right{
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#slide .mainpic .left:hover,
+#slide .mainpic .right:hover {
+  cursor: pointer;
+  background-color: gray;
+}
+
 #mainnav {
   overflow: hidden;
   background-color: #202d74;
@@ -95,6 +119,11 @@ header > img {
 
 #thumb .thumb .disabled {
   opacity: 0.5;
+}
+
+#thumb .thumb .disabled:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 #context {
@@ -218,4 +247,63 @@ header > img {
 #type02,
 #lost {
   margin-top: 30px;
+}
+
+#information {
+  margin-left: 50px;
+}
+
+#infolinks {
+  width: 850px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#infolinks .linkbox {
+  width: 48%;
+  margin-bottom: 35px;
+}
+
+#infolinks .linkbox h3 {
+  margin-bottom: 25px;
+  border-left: solid 10px #1e8796;
+  border-bottom: solid 1px #1e8796;
+  padding: 10px 0px 5px 10px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+#infolinks .links {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#infolinks .linkbox a {
+  display: block;
+  text-decoration: none;
+  width: 50%;
+  margin-bottom: 20px;
+  font-size: 14px
+}
+
+#topics .topictabs {
+  border: 0px;
+  border-bottom: solid 2px #202d74;
+  display: flex;
+  justify-content: space-around;
+}
+
+#topics .tab {
+  background-color: #202d74;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  width: 211px;
+  text-align: center;
+  padding: 15px 0px;
+}
+
+#topics .tab.disabled {
+  background-color: #c9c9c9;
 }
